--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Great Britain -- Kings and rulers -- Biography'
 - !lcsh 'Henry VIII, King of England, 1491-1547 -- Relations with courts and courtiers'
+- GITenberg
 title: 'Henry VIII and His Court
 
   6th edition'
